Fix topic_nav + section search behavior due to a variety of overflow rules

--- a/components/navigation/topic_nav/_drupal.scss
+++ b/components/navigation/topic_nav/_drupal.scss
@@ -2,8 +2,9 @@
 // conflict heavily with contextual search results
 
 .topic-nav--stories-overview .topic-nav {
-  .topic-nav__drawers {
-    overflow: initial;
+  // Specifically override the overflow to allow section search results to not be cut off.
+  .topic-nav__drawers.is-open {
+    overflow: initial !important;
   }
 
   .topic-nav__search {
